# my_opencl_project

./: .gitignore  CMakeLists.txt  createDocumentatio.sh  cuda_installation  kaavio  native_compile.sh  opencl.txt  raportti.txt  runNative.sh
includes/imgui/: imgui_impl_opengl3.h
shaders/: Noise2.cl  camera_debug.frag  camera_debug.geom  camera_debug.vert  cube_line.geom  cube_wire.frag  cube_wire.geom  cube_wire.vert  default_notex.frag  default_notex.vert  density_points.frag  density_points.geom  density_points.vert  evalDencity.cl  example.cl  mc.cl  ray.cl  rayTrace.cl  ray_screen.frag  ray_screen.geom  ray_screen.vert  raymarch.frag  raymarch.vert
shaders/clNoise/: ABS.h  Billow.h  CLAMP.h  Checkerboard.h  Const.h  Cylinders.h  GradientCoherentNoise3D.h  GradientNoise3D.h  MAX.h  MIN.h  MIX.h  MakeInt32Range.h  Perlin.h  PlaneMap.h  RidgedMulti.h  SCurve5.h  SMOOTHSTEP.h  Voronoi.h  gradient.h  grayscale.h  modules.h  modules_headers.h  turbulence.h
shadersNative/: mc.cl
src/: CMakeLists.txt  doxy_conf  hello.cpp
src/Graphics/: IACamera.cpp  IACamera.h  TextureSampler.h  camera.cpp  camera.h  programstate.cpp  programstate.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  textureData.h  vertexAttributes.cpp  vertexbuffer.cpp  vertexbuffer.h  window.cpp  window.h
src/OpenCL/: CL_Buffer.cpp  CL_Buffer.h  CL_Helper.cpp  CL_Helper.h  CL_Program.cpp  CL_Program.h  CommandQueue.cpp  CommandQueue.h  GPU_Device.cpp  GPU_Device.h  OCL.cpp  OCL.h
src/Program/: EventListener.h  GlobalPropertyManager.h  InputCache.cpp  InputCache.h  Marching_Cubes_data.cpp  Marching_Cubes_data.h  Program.cpp  Program.h  ResourceManager.h  includes.h
src/Tests/: EventTests.h
src/Utils/: Helper.cpp  Helper.h  log.cpp  log.h  misc.cpp  misc.h  static_string.h
